--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -24,20 +24,17 @@
 
       <nav class="indigo">
         <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Logo</a>
+          <a href="#" class="brand-logo">Recipes</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
-            <li><a href="collapsible.html">JavaScript</a></li>
+            <li><a href="#">New Recipe</a></li>
+            <li><a href="/authentication/logout">Log Out</a></li>
           </ul>
         </div>
       </nav>
-
+      <div class="container">
         <%= yield %>
+      </div>
 
-      <footer class="branding">
-        <small>&copy; 2021 <strong>RecipeNotebook</strong></small>
-      </footer>
     </div>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
