--- a/app/views/users/registration/signup.erb
+++ b/app/views/users/registration/signup.erb
@@ -12,7 +12,9 @@
         <label for="password">Password: </label>
         <input type="text" name="password" id="password">
 
-        <input type="submit" value="Log In">
+        <input type="submit" value="Sign Up">
     </form>
+
+    <h3> Looking to log in? </h3>     <a href="/authentication/login">Log In Here</a>
 
 </div>
