refactor, create new recipe form

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,12 +21,11 @@
   </head>
   <body>
     <div class="wrapper">
-
       <nav class="indigo">
         <div class="nav-wrapper">
           <a href="#" class="brand-logo">Recipes</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="#">New Recipe</a></li>
+            <li><a href="/recipes/new">New Recipe</a></li>
             <li><a href="/authentication/logout">Log Out</a></li>
           </ul>
         </div>
