edited new recipe form and homepage

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,9 +22,10 @@
   <body>
     <div class="wrapper">
       <nav class="indigo">
-        <div class="nav-wrapper">
-          <a href="#" class="brand-logo">Recipes</a>
+        <div class="nav-wrapper container">
+          <a href="#" class="brand-logo">Recipe Notebook</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="/recipes">Home</a></li>
             <li><a href="/recipes/new">New Recipe</a></li>
             <li><a href="/authentication/logout">Log Out</a></li>
           </ul>
