--- a/app/views/recipes/index.erb
+++ b/app/views/recipes/index.erb
@@ -1,6 +1,7 @@
 
-
-
-<p><% @recipes.each do |recipe| %>
-    <%= recipe.name %>
-<% end %></p>
+<h3> My Recipes </h3>
+<ul>
+    <% @recipes.each do |recipe| %>
+        <li><h5><a href="/recipes/<%= recipe.id %>"><%= recipe.name %></a></h5></li>
+    <% end %>
+</ul>
