--- a/app/views/recipes/new.erb
+++ b/app/views/recipes/new.erb
@@ -1,40 +1,45 @@
 
 
-<h2>Create a New Recipe Here:</h2>
+<h3>Create a New Recipe Here:</h3>
 
 <div class="container">
     <form method="post" action="/recipes">
+
+        <h6> Recipe Name: </h6>
+        <input type="text" name="recipe[name]" id="recipe_name">
+        <h6>Cuisine: </h6>
+        <input type="text" name="recipe[cuisine]" id="recipe_cuisine">
+        <h6>Chef: </h6>
+        <input type="text" name="recipe[author]" id="recipe_author">
+        <h6>Cooking/Prep Time: </h6>
+        <input type="text" name="recipe[cook_time]" id="recipe_cook_time">
+
+        <h5>Add Ingredients: </h5>
         <div class="row">
-            <div class="col s2">
-                <h4> Amount: </h4>
-                <% 5.times do %>
-                    <input type="text" name=amts[] id="amts">
-                <% end %>
-            </div>
-            
-            <div class="col s2">
-                <h4> Unit: </h4>
-                <% 5.times do %>
-                    <input type="text" name=units[] id="units">
-                <% end %>
-            </div>
-            
-            
-            <div class="col s8">
-                <h4>Ingredient: </h4>
-                <% 5.times do %>
-                    <input type="text" name=ings[] id="ings">
-                <% end %>
-            </div>
+            <h6 class="col s2">Quantity: </h6>
+            <h6 class="col s2">Unit: </h6>
+            <h6 class="col s8">Ingredient: </h6>
         </div>
 
+        <div class="row">
+                <% 10.times do %>
+                    <div class="col s2">
+                        <input type="text" name=amts[] id="amts">
+                    </div>
+                    <div class="col s2">
+                         <input type="text" name=units[] id="units">
+                    </div>
+                    <div class="col s8">
+                         <input type="text" name=ings[] id="ings">
+                    </div>
+                <% end %>
+        </div>
         <br><br>
-
         <div class ="row">
             <div class="col s12">
                 <h4>Steps: </h4>
                 <% i = 1 %>
-                <% 5.times do %>
+                <% 10.times do %>
                     <%= "#{i}. " %><input type="text" name=steps[] id="step">
                     <% i += 1 %>
                 <% end %>
