--- a/app/views/application/welcome.erb
+++ b/app/views/application/welcome.erb
@@ -1,1 +1,11 @@
-<h1>TESTING TESTING</h1>
+
+
+
+<div class="container">
+    <h1>Welcome to your recipe notebook.</h1>
+    <h1>Please log in or sign up. </h1>
+    <div class="row">
+        <h3 class="col s4"><a href="/authentication/login">Log In</a></h3>
+        <h3 class="col s4"><a href="/registration/signup">Sign Up</a></h3>
+    </div>
+</div>
