--- a/app/views/recipes/index.erb
+++ b/app/views/recipes/index.erb
@@ -1,4 +1,8 @@
 
+
+<img style="height:500px; width:1500px" src='images/nicolas-gras-UiGsP8TvOJQ-unsplash.jpg'>
+
+
 <h3> My Recipes </h3>
 <ul>
     <% @recipes.each do |recipe| %>
