--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,9 +19,9 @@
 
 
   </head>
-  <body>
+  <body class="brown">
     <div class="wrapper">
-      <nav class="indigo">
+      <nav class= "grey darken-3">
         <div class="nav-wrapper container">
           <a href="#" class="brand-logo">Recipe Notebook</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
