--- a/app/views/recipes/index.erb
+++ b/app/views/recipes/index.erb
@@ -1,7 +1,7 @@
 
-
-<img style="height:500px; width:1500px" src='images/nicolas-gras-UiGsP8TvOJQ-unsplash.jpg'>
-
+<div style="width:100%;">
+    <img alt="a kitchen counter with hanging pots and pans" style="width:100%; margin-bottom: 25px;" src='images/nicolas-gras-UiGsP8TvOJQ-unsplash.jpg'/>
+</div>
 
 <h3> My Recipes </h3>
 <ul>
