major database restructure, css edits

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,6 +16,10 @@
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
+    <style> 
+      a { color:black ;}
+      .btn { background-color: grey}
+    </style>
 
 
   </head>
