--- a/app/views/recipes/new.erb
+++ b/app/views/recipes/new.erb
@@ -11,6 +11,8 @@
         <input type="text" name="recipe[author]" id="recipe_author">
         <h6>Cuisine: </h6>
         <input type="text" name="recipe[cuisine]" id="recipe_cuisine">
+        <h6>Serves: </h6>
+        <input type="text" name="recipe[serves]" id="recipe_serves">
         <h6>Meal: </h6>
         <% @meals.each do |meal| %>
             <p>
@@ -48,7 +50,7 @@
                 <% end %>
             </div>
         </div>
-        <input type="submit" value="submit">
+        <input class="btn" type="submit" value="submit">
     </form>
 </div>
         
