--- a/app/views/users/authentication/login.erb
+++ b/app/views/users/authentication/login.erb
@@ -13,7 +13,7 @@
         <label for="password">Password: </label>
         <input type="text" name="password" id="password">
 
-        <input type="submit" value="Log In">
+        <input class="btn" type="submit" value="Log In"> <a float="right" class="btn" href="/registration/signup">Sign Up</a>
     </form>
 
 </div>
