--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -27,7 +27,7 @@
     <div class="wrapper">
       <nav class= "grey darken-3">
         <div class="nav-wrapper container">
-          <a href="#" class="brand-logo">Recipe Notebook</a>
+          <a href="/recipes" class="brand-logo">Recipe Notebook</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="/recipes">Home</a></li>
             <li><a href="/recipes/new">New Recipe</a></li>
