debugged edit/new

--- a/app/views/recipes/new.erb
+++ b/app/views/recipes/new.erb
@@ -50,7 +50,7 @@
                 <% end %>
             </div>
         </div>
-        <input class="btn" type="submit" value="submit">
+        <input class="btn" type="submit" value="Save">
     </form>
 </div>
         
