--- a/app/views/recipes/edit.erb
+++ b/app/views/recipes/edit.erb
@@ -37,9 +37,19 @@
                         <input type="text" name="quants[]" id="quants" value="<%= RecipeIngredient.find_by(recipe_id: @recipe.id, ingredient_id: ing.id).quantity %>">
                     </div>
                     <div class="col s9">
-                         <input type="text" name="ings[]" id="ings" value=<%= ing.name %>>
+                         <input type="text" name="ings[]" id="ings" value="<%= ing.name %>">
                     </div>
                 <% end %>
+                <% 10.times do %>
+                    <div class="col s3">
+                        <input type="text" name="quants[]" id="quants">
+                    </div>
+                    <div class="col s9">
+                         <input type="text" name="ings[]" id="ings">
+                    </div>
+                <% end %>              
+                    
+
         </div>
         <br><br>
         <div class ="row">
@@ -56,7 +66,7 @@
                 <% end %>
             </div>
         </div>
-        <input class="btn" type="submit" value="Edit Recipe">
+        <input class="btn" type="submit" value="Save">
     </form>
 </div>
         
