add recipe, changed header color

--- a/app/views/recipes/show.erb
+++ b/app/views/recipes/show.erb
@@ -1,5 +1,5 @@
 
-<h3><%= @recipe.name.split(" ").map {|w| w.capitalize}.join(" ") %></h3>
+<h3 style="color:#7B0000"><%= @recipe.name.split(" ").map {|w| w.capitalize}.join(" ") %></h3>
 
 <div class="row" style="display:block">
     <div class="col s2"><h5>Chef: </h5> <%= @recipe.author %></div>
