--- a/app/views/recipes/index.erb
+++ b/app/views/recipes/index.erb
@@ -3,9 +3,12 @@
     <img alt="a kitchen counter with hanging pots and pans" style="width:100%; margin-bottom: 25px;" src='images/nicolas-gras-UiGsP8TvOJQ-unsplash.jpg'/>
 </div>
 
+
+<div>
 <h3> My Recipes </h3>
-<ul>
-    <% @recipes.each do |recipe| %>
-        <li><h5><a href="/recipes/<%= recipe.id %>"><%= recipe.name %></a></h5></li>
-    <% end %>
-</ul>
+    <ul>
+        <% @recipes.each do |recipe| %>
+            <li><h5><a href="/recipes/<%= recipe.id %>"><%= recipe.name %></a></h5></li>
+        <% end %>
+    </ul>
+</div>
