Create and edit retry form

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,6 +19,7 @@
     <style> 
       a { color:black ;}
       .btn { background-color: grey}
+      .nav-wrapper.container a {color:black !important;}
     </style>
 
 
