--- a/app/views/recipes/retry.erb
+++ b/app/views/recipes/retry.erb
@@ -7,28 +7,27 @@
         <% end %>
 
 <div class="container">
-    <form method="post" action="/recipes/<%= @recipe.id %>">
-        <input id="hidden" type="hidden" name="_method" value="patch">
+    <form method="post" action="/recipes">
         <h6> Recipe Name: </h6>
-        <input type="text" name="recipe[name]" id="recipe_name" value="<%= @recipe.name %>">
+        <input type="text" name="recipe[name]" id="recipe_name" value="<%= @recipe_data[:recipe][:name] %>">
         <h6>Chef: </h6>
-        <input type="text" name="recipe[author]" id="recipe_author" value="<%= @recipe.author %>">
+        <input type="text" name="recipe[author]" id="recipe_author" value="<%= @recipe_data[:recipe][:author] %>">
         <h6>Cuisine: </h6>
-        <input type="text" name="recipe[cuisine]" id="recipe_cuisine" value="<%= @recipe.cuisine %>">
+        <input type="text" name="recipe[cuisine]" id="recipe_cuisine" value="<%= @recipe_data[:recipe][:cuisine] %>">
         <h6>Serves: </h6>
-        <input type="text" name="recipe[serves]" id="recipe_serves" value="<%= @recipe.serves %>">
+        <input type="text" name="recipe[serves]" id="recipe_serves" value="<%= @recipe_data[:recipe][:serves] %>">
         <h6>Meal: </h6>
         <% @meals.each do |meal| %>
             <p>
             <label>
-                <input type="checkbox" name="[meals][]" id="meal_<%= @meals.index(meal) %>" value="<%= meal %>" <%= "checked" if @recipe.meals.pluck(:name).include?(meal) %>>
+                <input type="checkbox" name="[meals][]" id="meal_<%= @meals.index(meal) %>" value="<%= meal %>" <%= "checked" if @recipe_data[:recipe][:meals].pluck(:name).include?(meal) %>>
                 <span><%= meal %></span>
             </label>
             </p>
         <% end %>
           
         <h6>Cooking/Prep Time: </h6>
-        <input type="text" name="recipe[cook_time]" id="recipe_cook_time" value="<%= @recipe.cook_time %>">
+        <input type="text" name="recipe[cook_time]" id="recipe_cook_time" value="<%= @recipe_data[:recipe][:cook_time] %>">
 
         <h5>Ingredients: </h5>
         <div class="row">
@@ -36,12 +35,14 @@
             <h6 class="col s9">Ingredient: </h6>
         </div>
         <div class="row">
-                <% @ingredients.each do |ing| %>
+                <% @recipe_data[:quants].each do |quant| %>
                     <div class="col s3">
-                        <input type="text" name="quants[]" id="quants" value="<%= RecipeIngredient.find_by(recipe_id: @recipe.id, ingredient_id: ing.id).quantity %>">
+                        <input type="text" name="quants[]" id="quants" value="<%= quant %>">
                     </div>
+                <% end %>
                     <div class="col s9">
-                         <input type="text" name="ings[]" id="ings" value="<%= ing.name %>">
+                    <% @recipe_data[:ings].each do |ing| %>
+                         <input type="text" name="ings[]" id="ings" value="<%= ing %>">
                     </div>
                 <% end %>
                 <% 10.times do %>
