--- a/app/views/recipes/edit.erb
+++ b/app/views/recipes/edit.erb
@@ -1,35 +1,35 @@
 
 
-<h3>Edit your recipe:</h3>
+<h4>Edit your recipe:</h4>
 
 <div class="container">
     <form method="post" action="/recipes/<%= @recipe.id %>">
         <input id="hidden" type="hidden" name="_method" value="patch">
-        <h6> Recipe Name: </h6>
+         <label for="recipe_name"> Recipe Name: </label>
         <input type="text" name="recipe[name]" id="recipe_name" value="<%= @recipe.name %>">
-        <h6>Chef: </h6>
+        <label for="recipe_author"> Chef: </label>
         <input type="text" name="recipe[author]" id="recipe_author" value="<%= @recipe.author %>">
-        <h6>Cuisine: </h6>
+        <label for="recipe_cuisine"> Cuisine: </label>
         <input type="text" name="recipe[cuisine]" id="recipe_cuisine" value="<%= @recipe.cuisine %>">
-        <h6>Serves: </h6>
+        <label for="recipe_serves"> Serves: </label>
         <input type="text" name="recipe[serves]" id="recipe_serves" value="<%= @recipe.serves %>">
         <h6>Meal: </h6>
-        <% @meals.each do |meal| %>
+        <% MEALS.each do |meal| %>
             <p>
             <label>
-                <input type="checkbox" name="[meals][]" id="meal_<%= @meals.index(meal) %>" value="<%= meal %>" <%= "checked" if @recipe.meals.pluck(:name).include?(meal) %>>
+                <input type="checkbox" name="[meals][]" id="meal_<%= MEALS.index(meal) %>" value="<%= meal %>" <%= "checked" if @recipe.meals.pluck(:name).include?(meal) %>>
                 <span><%= meal %></span>
             </label>
             </p>
         <% end %>
           
-        <h6>Cooking/Prep Time: </h6>
+        <label for="recipe_cook_time"> Cooking/Prep Time: </label>
         <input type="text" name="recipe[cook_time]" id="recipe_cook_time" value="<%= @recipe.cook_time %>">
 
-        <h5>Ingredients: </h5>
+        <h6>Ingredients: </h6><br>
         <div class="row">
-            <h6 class="col s3">Quantity: </h6>
-            <h6 class="col s9">Ingredient: </h6>
+            <label for="quants" class="col s3">Quantity: </label>
+            <label for="ings" class="col s9">Ingredient: </label>
         </div>
         <div class="row">
                 <% @ingredients.each do |ing| %>
@@ -48,13 +48,11 @@
                          <input type="text" name="ings[]" id="ings">
                     </div>
                 <% end %>              
-                    
-
         </div>
         <br><br>
         <div class ="row">
             <div class="col s12">
-                <h4>Steps: </h4>
+                <h6>Steps: </h6><br>
                 <% i = 1 %>
                 <% @recipe.instructions.pluck("content").each do |inst| %>
                     <%= "#{i}. " %><input type="text" name="steps[]" id="step" value="<%= inst %>">
