--- a/app/views/recipes/new.erb
+++ b/app/views/recipes/new.erb
@@ -1,35 +1,34 @@
 
 
-<h3>Create a New Recipe Here:</h3>
+<h4>Create a New Recipe Here:</h4>
 
 <div class="container">
     <form method="post" action="/recipes">
-
-        <h6> Recipe Name: </h6>
+        <label for="recipe_name">Recipe Name:</label>
         <input type="text" name="recipe[name]" id="recipe_name">
-        <h6>Chef: </h6>
+        <label for="recipe_author">Chef:</label>
         <input type="text" name="recipe[author]" id="recipe_author">
-        <h6>Cuisine: </h6>
+        <label for="recipe_cuisine">Cuisine:</label>
         <input type="text" name="recipe[cuisine]" id="recipe_cuisine">
-        <h6>Serves: </h6>
+        <label for="recipe_serves">Serves:</label>
         <input type="text" name="recipe[serves]" id="recipe_serves">
         <h6>Meal: </h6>
-        <% @meals.each do |meal| %>
+        <% MEALS.each do |meal| %>
             <p>
             <label>
-                <input type="checkbox" name="[meals][]" id="meal_<%= @meals.index(meal) %>" value="<%= meal %>" />
+                <input type="checkbox" name="[meals][]" id="meal_<%= MEALS.index(meal) %>" value="<%= meal %>" />
                 <span><%= meal %></span>
             </label>
             </p>
         <% end %>
           
-        <h6>Cooking/Prep Time: </h6>
+        <label for="recipe_cook_time">Cooking/Prep Time:</label>
         <input type="text" name="recipe[cook_time]" id="recipe_cook_time">
 
-        <h5>Add Ingredients: </h5>
+        <br><br><h6>Add Ingredients: </h6><br>
         <div class="row">
-            <h6 class="col s3">Quantity: </h6>
-            <h6 class="col s9">Ingredient: </h6>
+            <label class="col s3" for="quants">Quantity:</label>
+            <label class="col s9" for="ings">Ingredient:</label>
         </div>
         <div class="row">
                 <% 10.times do %>
@@ -44,7 +43,7 @@
         <br><br>
         <div class ="row">
             <div class="col s12">
-                <h4>Steps: </h4>
+                <h6>Steps: </h6>
                 <% 10.times do |index| %>
                     <%= "#{index + 1}. " %><input type="text" name=steps[] id="step">
                 <% end %>
