--- a/app/views/users/registration/failure.erb
+++ b/app/views/users/registration/failure.erb
@@ -2,7 +2,7 @@
 
 <div class="container">
 
-    <h1>Someone has that username already. If it's you, please click log in. If not, please choose a different username and try again: </h1>
+    <h1>There was an error with your signup, or someone already has that username. Please try again: </h1>
 
 
 
