--- a/app/views/recipes/edit.erb
+++ b/app/views/recipes/edit.erb
@@ -1,6 +1,6 @@
 
 
-<h4>Edit your recipe:</h4>
+<h4>Create a New Recipe Here:</h4>
 
 <div class="container">
     <form method="post" action="/recipes/<%= @recipe.id %>">
@@ -13,6 +13,9 @@
         <input type="text" name="recipe[cuisine]" id="recipe_cuisine" value="<%= @recipe.cuisine %>">
         <label for="recipe_serves"> Serves: </label>
         <input type="text" name="recipe[serves]" id="recipe_serves" value="<%= @recipe.serves %>">
+        <label for="recipe_cook_time">Cooking/Prep Time:</label>
+        <input type="text" name="recipe[cook_time]" id="recipe_cook_time" value="<%= @recipe.cook_time %>">
+        
         <h6>Meal: </h6>
         <% MEALS.each do |meal| %>
             <p>
@@ -23,45 +26,46 @@
             </p>
         <% end %>
           
-        <label for="recipe_cook_time"> Cooking/Prep Time: </label>
-        <input type="text" name="recipe[cook_time]" id="recipe_cook_time" value="<%= @recipe.cook_time %>">
 
-        <h6>Ingredients: </h6><br>
+        <br><br><h6>Add Ingredients: </h6><br>
         <div class="row">
-            <label for="quants" class="col s3">Quantity: </label>
-            <label for="ings" class="col s9">Ingredient: </label>
+            <label class="col s3" for="quants">Quantity:</label>
+            <label class="col s9" for="ingred_names">Ingredient:</label>
         </div>
         <div class="row">
-                <% @ingredients.each do |ing| %>
+                <% @recipe_ingredients.each do |ri| %>
                     <div class="col s3">
-                        <input type="text" name="ingreds[][quant]" id="quants" value="<%= RecipeIngredient.find_by(recipe_id: @recipe.id, ingredient_id: ing.id).quantity %>">
+                        <input type="text" name=ingreds[][quant] id="quants" value = "<%= ri.quantity %>">
                     </div>
                     <div class="col s9">
-                         <input type="text" name="ingreds[][name]" id="ings" value="<%= ing.name %>">
+                         <input type="text" name=ingreds[][name] id="ingred_names" value = "<%= Ingredient.find(ri.ingredient_id).name %>">
                     </div>
                 <% end %>
                 <% 10.times do %>
                     <div class="col s3">
-                        <input type="text" name="ingreds[][quant]" id="quants">
+                        <input type="text" name=ingreds[][quant] id="quants">
                     </div>
                     <div class="col s9">
-                         <input type="text" name="ingreds[][name]" id="ings">
+                         <input type="text" name=ingreds[][name] id="ingred_names">
                     </div>
-                <% end %>              
+                <% end %>                
         </div>
         <br><br>
         <div class ="row">
             <div class="col s12">
-                <h6>Steps: </h6><br>
-                <% i = 1 %>
-                <% @recipe.instructions.pluck("content").each do |inst| %>
-                    <%= "#{i}. " %><input type="text" name="steps[]" id="step" value="<%= inst %>">
-                    <% i += 1 %>
-                <% end %>
-                <% 5.times do %>
-                    <%= "#{i}. " %><input type="text" name="steps[]" id="step">
-                    <% i += 1 %>
-                <% end %>
+                <h6>Steps: </h6>
+                <ol>
+                    <% @recipe.instructions.each do |inst| %>
+                        <div class="col s12">
+                            <li><input type="text" name=steps[] id="steps" value = "<%= inst.content %>"></li>
+                        </div>
+                    <% end %>                
+                    <% 10.times do %>
+                        <div class="col s12">
+                            <li><input type="text" name=steps[] id="steps"></li>
+                        </div>
+                    <% end %>
+                </ol>
             </div>
         </div>
         <input class="btn" type="submit" value="Save">
@@ -69,3 +73,4 @@
 </div>
         
     
+
