--- a/app/views/users/authentication/login.erb
+++ b/app/views/users/authentication/login.erb
@@ -11,7 +11,7 @@
         <input type="text" name="username" id="username">
 
         <label for="password">Password: </label>
-        <input type="text" name="password" id="password">
+        <input class="validate" type="password" name="password" id="password">
 
         <input class="btn" type="submit" value="Log In"> <a float="right" class="btn" href="/registration/signup">Sign Up</a>
     </form>
